[package]
name = "mod_exp"
version = "1.0.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/mod_exp-rs"
homepage = "https://github.com/pwoolcoc/mod_exp-rs"
license = "MIT"
description = """
Crate for doing modular exponentiation efficiently
"""

[dependencies.num]
version = "*"
features = []
default-features = false
